--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-06  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* woman.el (woman-decode-region): Disable adaptive-fill when rendering
+	(bug#12756).
+
 2012-11-06  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/gv.el (gv-define-setter): Fix doc typo.
