--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,6 +2,7 @@
 
 	* cl.texi (Obsolete Setf Customization):
 	Move note on lack of setf functions to lispref/variables.texi.
+	Undocument get-setf-method, since it no longer exists.
 
 2012-11-03  Glenn Morris  <rgm@gnu.org>
 
