ispell.el (ispell-region): Do not prefix sent string by comment in autoconf mode
 This commit changes some of the `in-comment' ocurrences to more specific
 `add-comment', set only if comment prefix is to be added.
    
 When in comment, old code prefixed string by comment string to let ispell
 know this is part of a comment string.
    
 This is only supported in some modes. In particular, this is not supported in
 autoconf mode where adding the comment string messes everything up because
 ispell tries to spellcheck the `dnl' string header causing misalignments in
 some cases (debbugs.gnu.org: #12768).

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -13,6 +13,9 @@
 	(ispell-buffer-with-debug): New function that creates a debugging
 	buffer and calls `ispell-buffer' with debugging enabled.
 
+	* textmodes/ispell.el (ispell-region): Do not prefix sent string by
+	comment in autoconf mode. (Bug#12768)
+
 2012-11-06  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* emacs-lisp/byte-opt.el (toplevel): Add compare-window-configurations,
