--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/cl.el (defsetf): Pass the third arg to
+	gv-define-simple-setter (bug#12812).
+
 2012-11-06  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* woman.el (woman-decode-region): Disable adaptive-fill when rendering
