--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-07  Glenn Morris  <rgm@gnu.org>
+
+	* cl.texi (Obsolete Setf Customization):
+	Revert defsetf example to the more correct let rather than prog1.
+
 2012-11-06  Glenn Morris  <rgm@gnu.org>
 
 	* cl.texi (Overview): Mention EIEIO here, as well as the appendix.
