--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-07  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/gv.el (gv-letplace): Fix doc typo.
+	(gv-define-simple-setter): Update doc of `fix-return'.
+
 2012-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/gv.el (gv-define-simple-setter): Don't evaluate `val'
