* cl.texi (Obsolete Setf Customization): Give define-modify-macro replacement.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,6 +2,7 @@
 
 	* cl.texi (Obsolete Setf Customization):
 	Revert defsetf example to the more correct let rather than prog1.
+	Give define-modify-macro gv.el replacement.
 
 2012-11-06  Glenn Morris  <rgm@gnu.org>
 
