More cl-lib and gv doc updates
* lisp/emacs-lisp/cl.el (define-setf-expander, defsetf)
(define-modify-macro): Doc fixes.

* doc/misc/cl.texi (Obsolete Setf Customization):
Give defsetf gv.el replacements.

* etc/NEWS: Related edit.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,7 +2,7 @@
 
 	* cl.texi (Obsolete Setf Customization):
 	Revert defsetf example to the more correct let rather than prog1.
-	Give define-modify-macro gv.el replacement.
+	Give define-modify-macro and defsetf gv.el replacements.
 
 2012-11-06  Glenn Morris  <rgm@gnu.org>
 
